--- a/Sfml/Sfml.vcxproj
+++ b/Sfml/Sfml.vcxproj
@@ -122,16 +122,23 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Displayer.cpp" />
+    <ClCompile Include="Inventory.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MapCreator.cpp" />
     <ClCompile Include="MenuManager.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Seed.cpp" />
+    <ClCompile Include="Shop.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Displayer.hh" />
+    <ClInclude Include="IItem.h" />
+    <ClInclude Include="Inventory.h" />
     <ClInclude Include="MapCreator.h" />
     <ClInclude Include="MenuManager.hh" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Seed.h" />
+    <ClInclude Include="Shop.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
